# ChangeLog for dev-lang/mercury
# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-lang/mercury/ChangeLog,v 1.151 2013/04/21 17:54:18 keri Exp $

*mercury-11.07.2 (21 Apr 2013)

  21 Apr 2013; <keri@gentoo.org> +mercury-11.07.2.ebuild:
  Version bump

  25 Jun 2012; <keri@gentoo.org> mercury-11.07.1.ebuild:
  Ensure debugger/completion test passes with --force-readline ml option

  24 Jun 2012; <keri@gentoo.org> mercury-11.07.1.ebuild:
  Check mmc is sufficiently recent when bootstrapping with installed mercury
  compiler

  22 Jun 2012; <keri@gentoo.org> mercury-11.07.1.ebuild:
  Include missing testsuite patches. Closes #422477

  09 Mar 2012; <keri@gentoo.org> mercury-11.07.1.ebuild:
  Update Mmake.vars to set INSTALL_LIBDIR

  09 Mar 2012; <keri@gentoo.org> -mercury-11.07_beta1.ebuild:
  Remove old beta version

*mercury-11.07.1 (09 Mar 2012)

  09 Mar 2012; <keri@gentoo.org> +mercury-11.07.1.ebuild:
  Version bump

*mercury-11.07 (09 Jan 2012)

  09 Jan 2012; <keri@gentoo.org> +mercury-11.07.ebuild:
  Version bump

  12 Aug 2011; <keri@gentoo.org> -mercury-0.13.1-r2.ebuild,
  -files/mercury-0.13.1-docs.patch, -files/mercury-0.13.1-libgrades.patch,
  -files/mercury-0.13.1-mmake-params.patch,
  -files/mercury-0.13.1-multilib.patch, -files/mercury-0.13.1-no-reconf.patch,
  -files/mercury-0.13.1-rebuild-mslice.patch,
  -files/mercury-0.13.1-tests-dir_test.patch,
  -files/mercury-0.13.1-tests-ho_and_type_spec_bug.patch,
  -files/mercury-0.13.1-tests-string_format.patch,
  -files/mercury-0.13.1-tests-workspace.patch, -mercury-10.04.ebuild,
  -mercury-10.04-r1.ebuild, -mercury-10.04.1.ebuild, -mercury-10.04.2.ebuild,
  -mercury-10.04.2-r1.ebuild, -mercury-11.01_beta1.ebuild:
  Remove old versions

  12 Aug 2011; Kacper Kowalik <xarthisius@gentoo.org> mercury-0.13.1-r2.ebuild,
  mercury-10.04.ebuild, mercury-10.04-r1.ebuild, mercury-10.04.1.ebuild,
  mercury-10.04.2.ebuild, mercury-10.04.2-r1.ebuild,