@@ -6,10 +6,12 @@ DIST mercury-11.01-gentoo-patchset-1.tar.gz 7129 SHA256 43dbcb63add22b24da7515b7
 DIST mercury-11.07-gentoo-patchset-0.tar.gz 6889 SHA256 2fce2c95b6cb8b5819fb576de8ce184293a926c52f120027e3195d14f0552d78 SHA512 adb182f4d020052db715e5beb2da6fa86470414735430393253c14240782f6a94e86d50b181cc8c7a9bf09fad62091ea5d53903bc8ddf09df7a85a5f0de3f631 WHIRLPOOL 908846defe2681086ee5cc93ccc86456696826abc9b2b8cdf80896616df053f8f812fcb45fd7fffb4f0062dc478c1b183b87f3d1276581e3a89feb5b6ef2cb0d
 DIST mercury-11.07.1-gentoo-patchset-4.tar.gz 7336 SHA256 477cde26b06650b96accdc32da4bb7edb382b8ad8a2ed3908a985d895070ad4a SHA512 1ae54d05cac374ac02f7368b19ba98567d7c513d471fc98e27f0d794137ff920d42acf7105e6652e6610b4ffec74c3f5b282e81668735a626f8d762d8192d1c4 WHIRLPOOL 529f6e4675b0437dffa83f6cdc5daf4d8c7e9a59e81dc0f6c54cc35be7255fca0ddb6afca4257bc960ded245b50b80cbeaf80c9d2b589fc92564845884f218c5
 DIST mercury-11.07.2-gentoo-patchset-0.tar.gz 7265 SHA256 d400e40ae62c5cb8e777c2409d70eee7f71f231733a95fd6549f82c6c2933500 SHA512 110e0aacd1ef274d9c7154b359267ec0277e680fe2bb9ec4942dfc167c4f02dfef85fbd205120875e485f1b186432157814891ea9f1d0d55f0cdf236b0a80257 WHIRLPOOL 9002362cc04943558399dc4350a9368d12ce6d9717afe42e7c150ad55c8b2fe326697bdea6e457c1b3611d448ecdf7b171219e23a123aec2d0e70f14ab443afa
+DIST mercury-13.05-gentoo-patchset-0.tar.gz 5947 SHA256 8af2076b571215e403079fab840bf4a769ff67ec1ebfdf7b92bf203a503acb99 SHA512 0662126b9802fe9cd6156b204dc28b4e02a7d55fc5f88e97717c7aeb764014ed537822c5a2d2a5520a6b78c092d2fe25b603f05e1e6d19821b7b2905aad53d0c WHIRLPOOL 56a10ac2503fe87099f29294d44a58902192c18a95d438908fbb31969050289ecd8461fc3188368309d1693bd89e1380c140e58d165d02bf5d8f10e4ccbf30e5
 DIST mercury-compiler-11.01.tar.gz 25122699 SHA256 2d12dc9bfaed46b1b30689b0592177bc871b21cf8852c8326c86371258bb18b0 SHA512 628eb95cc647a3334ed6cc9cdb19256dece544cac34600db2a495815215b494db74b1f196e3c48ba1cbb37b51404158d5a583caa20fd3e53488111927615b666 WHIRLPOOL 6720586514dfa954e8e777986d7b62fd2fb10ce1a309034bdc4e40431762c834cba98e93b129e69ba5a78451cd0f776fe916bce2b15996d1621cab59215481a6
 DIST mercury-compiler-11.07.1.tar.gz 25308185 SHA256 f3f1d4f0fb34567a69aaa9fb6f4ecff52b97a66ab6c8a868c4e284eb61d3dc11 SHA512 c102a1f2c2ed4384919685e3e11ba3b7da0152f6fe8899c2124e9bbb056ab81a5e2fc1dbb07934ca011ed96e7c6af168308c64eb4901db7d247fffd2ff226c4f WHIRLPOOL 6df5a68a9c0adc6d5ae490bd909951d8330db2c4e0bb704ab9be0fe8cdf7177093cd0943256fcbea8d666793d3d53c20b8c703deca43121114d89f1a508f32d5
 DIST mercury-compiler-11.07.2.tar.gz 25311504 SHA256 8afee5732d6d52343fbba8d6b9dd3f87b819673743a408a564eede17956ea659 SHA512 144f496cdfbdb88e15a18b3c295d326ebb1054055c42cb1a5fd634b79797c8dbd46ef5d1731f4c4cb1add02795e9b7d1d72e0426c39e672e208f10068e65df8b WHIRLPOOL a443bad02d714737aa2e1875205915db78bc776cf75f01f98e99efab992a5a542c86772615e9a4066b1143977e354441f07a033ef81a2d8f464226004f5de198
 DIST mercury-compiler-11.07.tar.gz 25298643 SHA256 77940d03834a3967e4505c4a92253c19aaea0fed4650ee94e772078abd6be6a2 SHA512 671bebb67ceca8af0844c2ba0d9db538564d3b324a913141be29c7632adb7a343b93fe771533173d5460ac34d5a69fd18b3ef7f55b26c0d0ee70b7cc2e35f10d WHIRLPOOL 992f5f52292066b775b264401f25b5e8ef246ced9b79c0ec06701f715e22e068ad81a17dea49f62bd72bc9cc0539b2ef7beb9be1401391209e2ab1e3876d0bfc
+DIST mercury-srcdist-13.05.tar.gz 54533409 SHA256 71f1f97484eaecf2c2f91f6731e23afc5cee966e149b61a7525b2bd9a2712d55 SHA512 d76fd3a0c487b2c65168b19ec6a5ea6b792c96692e029afe0589f93132422fc39e0aec856ae02e676cc30dc83780f9c4d4e0ea5f71681442279b900146b58c47 WHIRLPOOL b2cc0f1b074d980701c6d364f30f8bb2dd2556cbc23dca5a982b7c16b71c6834d7c81ea76bfcea25e369f32d606698b77eea168e3b25d4850f924dfa4f6929f4
 DIST mercury-tests-11.01.tar.gz 1351134 SHA256 862b70a589eb2d36c9fd82dbd2e0490dc4556f6edff604a54dfd6fc0ad6cccad SHA512 7cd0c2a5f3ef2b05ea32ea8867f788c583a9da96b6e3b4ed9c2ec5705fc7384c0811da782ed50b6d7f60963680036e116684b5bcc3f5f72cf6f0b319480ad997 WHIRLPOOL 298a898b970da20f64530cf736b5f901cc61ef028117f2434135b9efc77223e120a71e97373d494cdb89b422ef9bbf02ef51db4be3c383ffd6facaabb2018c6a
 DIST mercury-tests-11.07.1.tar.gz 1648437 SHA256 01558a6ddd28d2f832d88da8bbf38fec542d091fc53b5adf92fac5e2564c2057 SHA512 1b8f3749091e6a3cd8d3f07ca7ff87c20d9c90761c6dbf35253f68f4cb4ccb42310d66ebc98742508a4e1f6fb4d6497e7e34f10b2601ffec73694702f1b363b5 WHIRLPOOL 66cd530de280d34a037cc191818abb6f11bf4ea8f6f3143629883ff2d885350bdd8841215b6076d5b6ea2102d6ef913a9324d997fd287af12eed0cbe708692b2
 DIST mercury-tests-11.07.2.tar.gz 1573648 SHA256 039b5ecf25412b7f867b4b41aa1e27fa8e381533b5641fe5520cca8ba782d78c SHA512 247fd2521257d1eed8d5a00efdaf85c1b30d5ec430ed09b605bb7596295775ed1b62c1274caca6fba66b28b51c92380f42f003bffab4054bfd755fbaa2c16888 WHIRLPOOL 5213e51dc95a35345e5005c03741bf90f35106f4974f7e25e9277e945a3b88411a561769cc6be80f84e9ac0b7cf7b5c8f32b17d9c22785991995fbe3fdf53002
@@ -18,12 +20,13 @@ EBUILD mercury-11.01.ebuild 5815 SHA256 1677f4b9f63c3bd405898616204bdf67c9bf8a88
 EBUILD mercury-11.07.1.ebuild 5813 SHA256 e37e2481f607eb52bcfd89c8d1f5656f0cd01361c68fe565480346eb811749d7 SHA512 4002d6db051977acea164c725eea5f8c0c78ad87871b675e056664136f0c5e1ba7a1b8a033615643336e855cd60facc1d9c4069a531e43c672a199cb2eb62cf8 WHIRLPOOL 865dea747a34603cd2a6368eef18481348b44bc46c6f842930b321cc437ec480ecb445e988e7f420f44d12560f4de328cbf931ca2ed9bc25015f5b89cda54dbf
 EBUILD mercury-11.07.2.ebuild 5749 SHA256 46c44fc51f882341b7838d18a71f81661cdae5f0e385525611cad7bd9aa9e35b SHA512 046e09e1c93aa70a357e7a9e1967730cd422303496f75be26a7b5e70eb2d5edca70ed2830c74349f234fd91df247e6595d4c3109a8b3b71b289e97f758c8e4eb WHIRLPOOL 19e9a380ba7ad629483ee7b36efc337582e32adb80f9875b3464402d4ef3cc73dfe715a769590008152d8789f59cf8ddb6b6a249468f913efb6f3f8cd5bcfd08
 EBUILD mercury-11.07.ebuild 5811 SHA256 3164de7bf4263e502b84a11213c6232f88dc9282a148b1bc4b22fbd91428a85a SHA512 473e14ca241703b96fa9ae955cd1b572128d5a6ca4b97d663cbbf29ff5a9f9d23fca6e2657a69ac017d4c9dd1e18d89b7fe16cfed45ad7ff5deecdedd612dba4 WHIRLPOOL cf74f8a2edbcb33ffe37e5f1a1f2f03064f72e07199179ac242d4a986032104c549081814d1bfc191330be897cfc4a645dee52e2b5dac8e175f75f1c07425b32
-MISC ChangeLog 31725 SHA256 af9f5273363e866d2ee17591b3aa297adec2e02dd99aa9f56aa63f4d28bf346a SHA512 fa85a7a87174a4afb0123abc640d136f4262da73e3da8bb33003dd3f689bd25bfa50d14b627fe7db1c054a1cc0d9a196bfe0ea2a73a7f08018a4461db1dda301 WHIRLPOOL 2f34269e5179ad64312c571c6f02a65174e6aebd30009b9c71246d31d2399fd3ee59b21aeaf3c156797cdb5e08b3741fb01d303c231543eb35b704b706584ba0
+EBUILD mercury-13.05.ebuild 5090 SHA256 b901ec57c922ca68f1bdceff90cdf37dd18453fd0d24865ef40ecc3249f8feab SHA512 0f33174cb93f87c2acb2f2745cab9de471c27e7a54028a9f61e9993d26b4be97f55cfd442ffc9dbf3babb5f85b281d6228677696c48dd2073e7051a383a992fe WHIRLPOOL 5d01b930d7e50d80a1e9d29ca304a132b9d5af9e5384e08c1515d515ca92148649d8ba9edf5ad47f7f815716970b1eace6f0829ef1209175a6e8cb9357d86086
+MISC ChangeLog 31827 SHA256 ecd470d07df1822ff28dc4e5ad5e427abb74f3ee65961c2474069488be90db09 SHA512 9ad0f4ae1a41ad9e6964d9a332c5d54687cf211727cffb478031cf3a75440722d66662cef3b88afd0eb69109965ab9ebef996cd52f7c0337ac0fcdc6d72f945f WHIRLPOOL ee4e8b666afccda26d227dfbe7f594c86b04d517a68e714859436f7b9fcdbb103d7b1c8fbda1ce96ced2e19124e28f814d7aceb02e16dc26694b8e16569fcbaf
 MISC metadata.xml 297 SHA256 6814d23336067f1c5aace679d091bb6f4450122bfa7a94cbc66f625a8d970f4f SHA512 303a1a614f7410e9bcb6134fd1389f1888c397d7d8a0ee5cd06313d2aedba291d4ea6157c2822d221d62a127ee84c993233c4a765ffa043680695b8a0740c2dd WHIRLPOOL 4751c88795c6449fb1be5165552199b34c9534c328769b8fec2b3b4ffc83344d13542c589576e5c9fcdb24ff8d37844d0883fd1993ec304e16d5640a466280dc
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.19 (GNU/Linux)
 
-iEYEAREIAAYFAlF0J3YACgkQrwS/tqE49e0NcgCgrqxWaSTikO3m+H9ks/L3Thi6
-+7YAnjA2vJf5SszsT50etPBLXDPeQvTy
-=ggC0
+iEYEAREIAAYFAlGsR5AACgkQrwS/tqE49e3+ygCghllIyPkFhTriINHvRVMszhKj
+vikAn2qpNYqwGPaE7J36qNcr7ps9GMni
+=8Pt+
 -----END PGP SIGNATURE-----
