@@ -1,6 +1,11 @@
 # ChangeLog for dev-lang/mercury
 # Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-lang/mercury/ChangeLog,v 1.151 2013/04/21 17:54:18 keri Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-lang/mercury/ChangeLog,v 1.152 2013/06/03 07:39:23 keri Exp $
+
+*mercury-13.05 (03 Jun 2013)
+
+  03 Jun 2013; <keri@gentoo.org> +mercury-13.05.ebuild:
+  Version bump
 
 *mercury-11.07.2 (21 Apr 2013)
 
